welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
	var pas = 0;
	while(estSurBiscuit() == false) {
		avance();
		pas = pas + 1;
	}
	prendBiscuit();
	for (nbPas <- 1 to pas) {
		recule();
	}
	poseBuiscuit();
}
